--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,21 +1,38 @@
 <!DOCTYPE html>
-{% load static %}  <!-- Load static files -->
+{% load staticfiles %}
 
 <html>
 <head>
     <title>Rango</title>
 </head>
+
 <body>
     <h1>Rango says...</h1>
     <div>
-        Hey there partner! <br />
-        <strong>{{ boldmessage }}</strong><br />
+        hey there partner! <br/>
+        <strong>{{ boldmessage }}</strong>
     </div>
+
     <div>
-        <a href="/rango/about/">About</a><br />
-        <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />  <!-- Display the image -->
+        {% if categories %}
+        <ul>
+            {% for category in categories %}
+            <li>
+                <a href="/rango/category/{{ category.slug }}/">{{ category.name }}</a>
+            </li>
+            {% endfor %}
+        </ul>
+        {% else %}
+        <strong>There are no categories present.</strong>
+        {% endif %}
+    </div>
+
+    <div>
+        <a href="/rango/about/">About Rango</a><br />
+        <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
     </div>
 </body>
 </html>
+
 
 
